# pick-place-robot

./: AUTHORS  CODEOWNERS  IK_debug.py  IK_debug_numpy.py  IK_debug_sympy.py  LICENSE  README.md  writeup_template.md
gazebo_grasp_plugin/: CHANGELOG.rst  CMakeLists.txt  package.xml
gazebo_grasp_plugin/include/gazebo_grasp_plugin/: GazeboGraspFix.h  GazeboGraspGripper.h
gazebo_grasp_plugin/src/: GazeboGraspFix.cpp  GazeboGraspGripper.cpp
kr210_claw_moveit/: .setup_assistant  CMakeLists.txt  package.xml
kr210_claw_moveit/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  kuka_arm.srdf  ompl_planning.yaml
kr210_claw_moveit/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  kuka_arm_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
kuka_arm/launch/: inverse_kinematics.launch
kuka_arm/scripts/: IK_server.py  safe_spawner.sh
kuka_arm/src/: trajectory_sampler.cpp
